added role logic and added new dependencies session jdbc